--- a/css/style.css
+++ b/css/style.css
@@ -136,62 +136,78 @@ body{
     width: 100%;
     height: 500px;
 }
+.tituloServicios{
+    color: #a700fa;
+    font-size: 60px;
+}
+
 /*....grid de Servicios.....*/
-.grillaServicios {  display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    gap: 0px 0px;
-    grid-auto-flow: row;
-    grid-template-areas:
-      ". h1 h1 ."
-      "img img p p"
-      "img img h2 h2"
-      "img img p2 p2";
-  }
-  
-  .img { grid-area: img; }
-  
-  .p { grid-area: p; }
-  
-  .h2 { grid-area: h2; }
-  
-  .h1 { grid-area: h1; }
-  
-  .p2 { grid-area: p2; }
-  
-  
-.grillaServicios{
-    background-color:#edd6fa;
-    padding: 50px;
-}
-.imagenEdicion{
-    padding: 20px;
-    float: left;
-}
-.h1{
+
+.container{
     display: flex;
     justify-content: center;
-    color: blueviolet;
+    width: 100%;
+}
+.row-cols-2{
+    justify-content: space-between
+}
+.container figure{
+    position: relative;
+    height: 500px;
+    width: 500px;
+    overflow: hidden;
+    border-radius: 6px;
+    box-shadow: 0px 15px 25px;
+    cursor: pointer;
+}
+.container figure img{
+    width: 100%;
+    height: 100%;
+    transition: all 500ms ease-out
+}
+.container figure .capa{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color:rgba(0, 0, 0, 0.5);
+    transition: all 500ms ease-out;
+    opacity: 0;
+    visibility: hidden;
+    text-align: center;
+}
+.container figure:hover > .capa{
+    opacity: 1;
+    visibility: visible;
+}
+.container figure:hover > .capa h3{
+    margin: 60px;
+    margin-bottom: 15px;
+}
+.container figure .capa h3{
+    color: white;
+    transition: all 500ms ease-out;
+}
 
-}
-.p{
-    font-size: 20px;
-    color: black;
-}
-.h2{
-    font-size: 15px;
-    height: 70px;
-}
-.h2 h2{
-    margin-top: 15px;
-}
-.p2{
-    display: flex;
-    align-items: flex-start;
-}
-.img{
-    width: auto;
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 footer nav{
     display: flex;
     list-style: none;
