--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,9 @@ body{
     text-decoration: none;
     color:black
 }
+.header__menu li:hover{
+    background-color: white;
+}
 .logo{
     width: 100px;
     margin-left: 16px;
@@ -51,6 +54,10 @@ body{
 .header__redesSociales{
     display: flex;
     padding-top: 50px;
+}
+.logo:hover{
+    width: 123px;
+    transition: 0.5s;
 }
 /* -----------------------------------STYLE PRIMERA SECCIÓN--------------------------------- */
 .contenedorTitulo{
@@ -253,7 +260,7 @@ body{
     top: 0;
     width: 100%;
     height: 100%;
-    background-color:rgba(0, 0, 0, 0.5);
+    background-color:black;
     transition: all 500ms ease-out;
     opacity: 0;
     visibility: hidden;
@@ -271,6 +278,15 @@ body{
     color: white;
     transition: all 500ms ease-out;
 }
+.capa h5{
+    font-size: "Amaranth";
+    color: white;
+    padding: 5px;
+    margin: 10px;
+}
+.capa li{
+    color: white;
+}
 footer nav{
     display: flex;
     list-style: none;
@@ -279,9 +295,5 @@ footer a{
     margin: 5px;
     color: black;
 }
-/* AnimacionesTransicionesTransformaciones */
-.logo:hover{
-    width: 123px;
-    transition: 0.5s;
-}
+
 
