--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,10 +5,12 @@
     font-family: 'Amaranth', sans-serif;
     font-family: 'Vollkorn', serif;
 }
+//variables
 @import './variables/colores';
+//secciones
+@import './secciones/index';
 
 @import './header.footer/header';
-@import './secciones/index';
 @import './header.footer/footer';
 header{
     background-color: #edd6fa;
