--- a/css/style.css
+++ b/css/style.css
@@ -6,45 +6,43 @@
   font-family: 'Amaranth', sans-serif;
   font-family: 'Vollkorn', serif; }
 
-header {
-  background-color: #edd6fa; }
+.primeraSeccion {
+  padding: 0; }
+  .primeraSeccion .videoPresentacion {
+    width: 100%; }
+  .primeraSeccion__titulo {
+    color: #a700fa;
+    margin: 15px auto;
+    padding-left: 250px;
+    position: absolute;
+    left: 70px; }
+    .primeraSeccion__titulo h1 {
+      font-size: 50px; }
+  .primeraSeccion__parrafo {
+    padding: 50px;
+    position: relative;
+    top: 20px; }
+    .primeraSeccion__parrafo p {
+      font-size: 30px; }
+      .primeraSeccion__parrafo p li {
+        list-style: none;
+        font-size: 30px; }
+
+.header__logo {
+  width: 100px;
+  margin-left: 10px; }
+  .header__logo:hover {
+    width: 123px;
+    transition: 1s; }
+
+.header #menuNavegable {
+  justify-content: space-between;
+  font-size: 20px; }
+  .header #menuNavegable .nav-link {
+    color: black; }
 
 body {
   background-color: #edd6fa; }
-
-/* -----------------------------------STYLE MENU---------------------------------------- */
-.header__logo {
-  width: 100px;
-  margin-left: 16px; }
-
-.header__logo:hover {
-  width: 123px;
-  transition: 1s; }
-
-#menuNavegable {
-  justify-content: space-between;
-  font-size: 20px; }
-
-#menuNavegable .nav-link {
-  color: black; }
-
-.videoPresentacion {
-  width: 100%; }
-
-/* -----------------------------------STYLE PRIMERA SECCIÓN--------------------------------- */
-.contenedorTitulo {
-  color: #a700fa;
-  margin: 15px auto;
-  font-size: 50px; }
-
-.primeraSeccion__titulo {
-  color: #a700fa;
-  padding-left: 250px;
-  position: absolute;
-  left: 70px; }
-
-.primeraSeccion__titulo h1 {
-  font-size: 50px; }
 
 .primeraSeccion__parrafo {
   padding: 50px;
