agregue keywords a mi index

--- a/scss/secciones/_index.scss
+++ b/scss/secciones/_index.scss
@@ -2,7 +2,7 @@
 .primeraSeccion{
     padding: 0;
     .videoPresentacion{
-        width: 100%;
+        width: $ancho;
     }
     &__titulo{
         color: $violeta;
