--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,24 +10,15 @@
 @import './variables/tamanios';
 //secciones
 @import './secciones/index';
+@import './secciones/servicios';
+@import './secciones/empresa';
+@import './secciones/contacto';
 
 @import './header.footer/header';
 @import './header.footer/footer';
 
 body{
     background-color: #edd6fa;
-}
-.primeraSeccion__parrafo{
-    padding: 50px;
-    position: relative;
-    top: 20px;
-}
-.primeraSeccion__parrafo p{
-    font-size: 30px;
-}
-.primeraSeccion__parrafo li{
-    list-style: none;
-    font-size: 30px;
 }
 /* -----------------------------------STYLE SEGUNDA SECCIÓN--------------------------------- */
 .grillaSegundaSeccion { 
@@ -139,11 +130,6 @@ body{
     }
 }
 /* ---------------------------------------INICIO PAGINA SERVICIOS-------------------------------------------- */
-.banner{
-    margin-top: 15px;
-    width: 100%;
-    height: 500px;
-}
 .tituloServicios{
     color: #a700fa;
     font-size: 60px;
