--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
-@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Amaranth', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-family: 'Vollkorn', serif; }
 
 .primeraSeccion {
@@ -12,25 +12,122 @@
     width: 100%; }
   .primeraSeccion__titulo {
     color: #a700fa;
-    margin: 15px auto;
-    padding-left: 250px;
-    position: absolute;
-    left: 70px; }
+    position: relative;
+    margin: 30px;
+    top: 15px;
+    margin-left: 50vh; }
     .primeraSeccion__titulo h1 {
       font-size: 50px; }
   .primeraSeccion__parrafo {
-    padding: 50px;
     position: relative;
-    top: 20px; }
+    margin-left: 90px; }
     .primeraSeccion__parrafo p {
       font-size: 30px; }
-      .primeraSeccion__parrafo p li {
-        list-style: none;
-        font-size: 30px; }
+    .primeraSeccion__parrafo .primeraSeccion__parrafo--principal {
+      font-family: "Amaranth";
+      padding: 50px; }
+    .primeraSeccion__parrafo .primeraSeccion__parrafo--secundario {
+      font-family: "Vollkorn";
+      position: relative;
+      margin-left: 50vh;
+      margin-top: 70px; }
+    .primeraSeccion__parrafo li {
+      font-family: "Amaranth";
+      list-style: none;
+      position: relative;
+      margin-left: 55vh;
+      bottom: 20px;
+      font-size: 20px; }
+
+.grillaSegundaSeccion {
+  background-color: violet;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 1fr;
+  grid-template-rows: repeat(4, 0.4fr);
+  grid-auto-flow: row;
+  grid-template-areas: ". h2 h2 ." "h3 h3 iframe iframe" "p p iframe iframe"; }
+  @media screen and (max-width: 480px) {
+    .grillaSegundaSeccion {
+      grid-template-columns: 1fr;
+      gap: 0em; } }
+  .grillaSegundaSeccion .h2 {
+    grid-area: h2;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    color: ivory;
+    font-size: 20px;
+    background-color: #f3008c;
+    height: 70px; }
+  .grillaSegundaSeccion .h3 {
+    grid-area: h3;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    font-family: 'Amaranth'; }
+  .grillaSegundaSeccion .p {
+    grid-area: p;
+    display: flex;
+    margin: 20px;
+    padding-left: 30px; }
+  .grillaSegundaSeccion .iframe {
+    grid-area: iframe;
+    display: flex;
+    align-items: center; }
+
+.mainServicios .tituloServicios {
+  color: #a700fa;
+  font-size: 60px; }
 
 .mainServicios__banner {
   width: 100%;
   height: 350px; }
+
+.mainServicios__container {
+  display: flex;
+  justify-content: center;
+  width: 100%; }
+  .mainServicios__container .row-cols-2 {
+    justify-content: space-between; }
+  .mainServicios__container figure {
+    position: relative;
+    height: 500px;
+    width: 500px;
+    overflow: hidden;
+    border-radius: 6px;
+    box-shadow: 0px 15px 25px;
+    cursor: pointer; }
+    .mainServicios__container figure:hover > .capa {
+      opacity: 1;
+      visibility: visible; }
+    .mainServicios__container figure:hover > .capa h3 {
+      margin: 60px;
+      margin-bottom: 15px; }
+    .mainServicios__container figure h3 {
+      color: white;
+      transition: all 500ms ease-out; }
+    .mainServicios__container figure image {
+      width: 100%;
+      height: 100%;
+      transition: all 500ms ease-out; }
+    .mainServicios__container figure .capa {
+      position: absolute;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: black;
+      transition: all 500ms ease-out;
+      opacity: 0;
+      visibility: hidden;
+      text-align: center; }
+      .mainServicios__container figure .capa h5 {
+        font-size: "Amaranth";
+        color: white;
+        padding: 5px;
+        margin: 10px; }
+      .mainServicios__container figure .capa li {
+        color: white; }
 
 .mainEmpresa__banner {
   width: 100%;
@@ -75,183 +172,28 @@
 .container .formula {
   margin: 3px; }
 
-.header__logo {
-  width: 100px;
-  margin-left: 10px; }
-  .header__logo:hover {
-    width: 123px;
-    transition: 1s; }
-
-.header #menuNavegable {
-  justify-content: space-between;
-  font-size: 20px; }
-  .header #menuNavegable .nav-link {
-    color: black; }
-
-body {
-  background-color: #edd6fa; }
-
-/* -----------------------------------STYLE SEGUNDA SECCIÓN--------------------------------- */
-.grillaSegundaSeccion {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 0.8fr 1fr 1fr 0.3fr;
-  gap: 0px 0px;
-  grid-auto-flow: row;
-  grid-template-areas: ". h2 h2 ." "h3 h3 iframe iframe" "p p iframe iframe"; }
-
-.h2 {
-  grid-area: h2; }
-
-.h3 {
-  grid-area: h3; }
-
-.p {
-  grid-area: p; }
-
-.iframe {
-  grid-area: iframe; }
-
-.grillaSegundaSeccion {
-  background-color: violet; }
-
-.h2 {
-  display: flex;
-  justify-content: center;
-  background-color: #f5008f;
-  color: ivory;
-  font-size: 20px;
-  height: 70px; }
-
-.h3 {
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  font-family: 'Amaranth'; }
-
-.h3 h3 {
-  font-size: 40px;
-  font-family: 'Vollkorn'; }
-
-.p {
-  display: flex;
-  margin: 20px;
-  padding-left: 30px; }
-
-.iframe {
-  display: flex;
-  align-items: center; }
-
-/* Media Querys Index*/
-/* Tamaño Grande: Laptop */
-@media (max-width: 1024px) {
-  .primeraSeccion__titulo h1 {
-    margin-top: -50px;
-    margin-left: -190px; }
-  .h3 h3 {
-    font-size: 30px; }
-  .iframe {
-    width: 450px; }
-  .h2 {
-    align-items: center; } }
-
-/* Tamaño Mediano: Tablet */
-@media (max-width: 768px) {
-  .primeraSeccion__titulo h1 {
-    margin-top: -109px;
-    margin-left: -274px;
-    font-size: 45px; }
-  .primeraSeccion__parrafo {
-    top: -49px; }
-  .grillaSegundaSeccion {
-    display: flex;
-    align-items: center;
-    flex-direction: column; }
-  .footer nav {
-    justify-content: center; } }
-
-/* Tamaño chico: Mobile */
-@media (max-width: 320px) {
-  .primeraSeccion__parrafo p {
+.header {
+  background-color: #ffcaf8; }
+  .header__logo {
+    width: 100px;
+    margin-left: 10px; }
+    .header__logo:hover {
+      width: 123px;
+      transition: 1s; }
+  .header #menuNavegable {
+    justify-content: space-between;
     font-size: 20px; }
-  .primeraSeccion__parrafo li {
-    font-size: 20px; }
-  .grillaSegundaSeccion {
-    display: flex;
-    width: 100vh;
-    align-items: center;
-    flex-direction: column; }
-  .iframe {
-    width: 300px; }
-  .h3 h3 {
-    font-size: 20px;
-    margin-top: 15px; } }
+    .header #menuNavegable .nav-link {
+      color: black; }
 
-/* ---------------------------------------INICIO PAGINA SERVICIOS-------------------------------------------- */
-.tituloServicios {
-  color: #a700fa;
-  font-size: 60px; }
-
-/*....grid de Servicios.....*/
-.container {
-  display: flex;
-  justify-content: center;
-  width: 100%; }
-
-.row-cols-2 {
-  justify-content: space-between; }
-
-.container figure {
-  position: relative;
-  height: 500px;
-  width: 500px;
-  overflow: hidden;
-  border-radius: 6px;
-  box-shadow: 0px 15px 25px;
-  cursor: pointer; }
-
-.container figure img {
-  width: 100%;
-  height: 100%;
-  transition: all 500ms ease-out; }
-
-.container figure .capa {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: black;
-  transition: all 500ms ease-out;
-  opacity: 0;
-  visibility: hidden;
-  text-align: center; }
-
-.container figure:hover > .capa {
-  opacity: 1;
-  visibility: visible; }
-
-.container figure:hover > .capa h3 {
-  margin: 60px;
-  margin-bottom: 15px; }
-
-.container figure .capa h3 {
-  color: white;
-  transition: all 500ms ease-out; }
-
-.capa h5 {
-  font-size: "Amaranth";
-  color: white;
-  padding: 5px;
-  margin: 10px; }
-
-.capa li {
-  color: white; }
-
-footer nav {
+.footer nav {
   display: flex;
   justify-content: center;
   list-style: none; }
 
-footer a {
+.footer a {
   margin: 5px;
   color: black; }
+
+body {
+  background-color: #d6bbff; }
