--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,11 +3,13 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Amaranth', sans-serif;
-    font-family: 'Vollkorn', serif;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Vollkorn', serif;;
 }
 //variables
 @import './variables/colores';
 @import './variables/tamanios';
+@import './variables/mixin';
 //secciones
 @import './secciones/index';
 @import './secciones/servicios';
@@ -20,185 +22,5 @@
 @import './header.footer/footer';
 
 body{
-    background-color: #edd6fa;
-}
-/* -----------------------------------STYLE SEGUNDA SECCIÓN--------------------------------- */
-.grillaSegundaSeccion { 
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 0.8fr 1fr 1fr 0.3fr;
-    gap: 0px 0px;
-    grid-auto-flow: row;
-    grid-template-areas:
-      ". h2 h2 ."
-      "h3 h3 iframe iframe"
-      "p p iframe iframe"
-  }
-  
-  .h2 { grid-area: h2; }
-  
-  .h3 { grid-area: h3; }
-  
-  .p { grid-area: p; }
-  
-  .iframe { grid-area: iframe; }
-
-  .grillaSegundaSeccion {
-    background-color: violet;
-  }
-  .h2{
-    display:flex;
-    justify-content: center;
-    background-color: hsl(325, 100%, 48%);
-    color: ivory;
-    font-size: 20px;
-    height: 70px;
-  }
-  .h3{
-      display: flex;
-      justify-content: center;
-      align-items: flex-end;
-      font-family: 'Amaranth'
-  }
-  .h3 h3{
-      font-size: 40px;
-      font-family:'Vollkorn';
-  }
-  .p{
-      display: flex;
-      margin: 20px;
-      padding-left: 30px;
-  }
-  .iframe{
-    display: flex;
-    align-items: center;
-  }
-  /* Media Querys Index*/
-/* Tamaño Grande: Laptop */
-@media (max-width:1024px){
-    .primeraSeccion__titulo h1{
-    margin-top: -50px;
-    margin-left: -190px;
-    }
-    .h3 h3{
-    font-size: 30px;
-    }
-    .iframe{
-    width: 450px;
-    }
-    .h2{
-        align-items: center;
-    }
-}
-/* Tamaño Mediano: Tablet */
-@media (max-width:768px){
-    .primeraSeccion__titulo h1 {
-        margin-top: -109px;
-        margin-left: -274px;
-        font-size: 45px;
-    }
-    .primeraSeccion__parrafo{
-        top: -49px;
-    }
-    .grillaSegundaSeccion{
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-    }
-    .footer nav{
-        justify-content: center;
-    }
-}
-/* Tamaño chico: Mobile */
-@media (max-width:320px){
-    .primeraSeccion__parrafo p{
-    font-size: 20px;
-    }
-    .primeraSeccion__parrafo li{
-        font-size: 20px;
-    }
-    .grillaSegundaSeccion {
-        display: flex;
-        width: 100vh;
-        align-items: center;
-        flex-direction: column;
-    }
-    .iframe{
-        width: 300px;
-    }
-    .h3 h3 {
-        font-size: 20px;
-        margin-top: 15px;
-    }
-}
-/* ---------------------------------------INICIO PAGINA SERVICIOS-------------------------------------------- */
-.tituloServicios{
-    color: #a700fa;
-    font-size: 60px;
-}
-
-/*....grid de Servicios.....*/
-
-.container{
-    display: flex;
-    justify-content: center;
-    width: 100%;
-}
-.row-cols-2{
-    justify-content: space-between
-}
-.container figure{
-    position: relative;
-    height: 500px;
-    width: 500px;
-    overflow: hidden;
-    border-radius: 6px;
-    box-shadow: 0px 15px 25px;
-    cursor: pointer;
-}
-.container figure img{
-    width: 100%;
-    height: 100%;
-    transition: all 500ms ease-out
-}
-.container figure .capa{
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color:black;
-    transition: all 500ms ease-out;
-    opacity: 0;
-    visibility: hidden;
-    text-align: center;
-}
-.container figure:hover > .capa{
-    opacity: 1;
-    visibility: visible;
-}
-.container figure:hover > .capa h3{
-    margin: 60px;
-    margin-bottom: 15px;
-}
-.container figure .capa h3{
-    color: white;
-    transition: all 500ms ease-out;
-}
-.capa h5{
-    font-size: "Amaranth";
-    color: white;
-    padding: 5px;
-    margin: 10px;
-}
-.capa li{
-    color: white;
-}
-footer nav{
-    display: flex;
-    justify-content: center;
-    list-style: none;
-}
-footer a{
-    margin: 5px;
-    color: black;
+    background-color: #d6bbff;
 }
