--- a/scss/secciones/_servicios.scss
+++ b/scss/secciones/_servicios.scss
@@ -1,6 +1,64 @@
 .mainServicios{
+    .tituloServicios{
+        color: #a700fa;
+        font-size: 60px;
+    }
     &__banner{
         width: 100%;
         height: 350px;
+    }
+    &__container{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        .row-cols-2{
+            justify-content: space-between;
+        }
+        figure{
+            position: relative;
+            height: 500px;
+            width: 500px;
+            overflow: hidden;
+            border-radius: 6px;
+            box-shadow: 0px 15px 25px;
+            cursor: pointer;
+            &:hover> .capa{
+                opacity: 1;
+                visibility: visible;
+            }
+            &:hover > .capa h3{
+                margin: 60px;
+                margin-bottom: 15px;
+            }
+            h3{
+                color: white;
+                transition: all 500ms ease-out;
+            }
+        image{
+            width: 100%;
+            height: 100%;
+            transition: all 500ms ease-out
+        }
+        .capa{
+            position: absolute;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color:black;
+            transition: all 500ms ease-out;
+            opacity: 0;
+            visibility: hidden;
+            text-align: center;
+            h5{
+                font-size: "Amaranth";
+                color: white;
+                padding: 5px;
+                margin: 10px;
+            }
+            li{
+                color: white;
+            }
+        }
+      }
     }
 }
