--- a/scss/secciones/_proyectos.scss
+++ b/scss/secciones/_proyectos.scss
@@ -11,7 +11,7 @@
         flex-direction: column;
         padding: 20px;
         iframe{
-            margin: auto auto;
+            margin: 20px;
         }
     }
 }
