--- a/scss/secciones/_servicios.scss
+++ b/scss/secciones/_servicios.scss
@@ -50,13 +50,15 @@
             visibility: hidden;
             text-align: center;
             h5{
-                font-size: "Amaranth";
                 color: white;
+                font-family: "Amaranth";
                 padding: 5px;
                 margin: 10px;
             }
             li{
                 color: white;
+                text-align: start;
+                margin-left: 10px;
             }
         }
       }
