--- a/scss/secciones/_contacto.scss
+++ b/scss/secciones/_contacto.scss
@@ -3,8 +3,13 @@
         color: white;
         position: absolute;
         left: 10%;
+        top: 200px;
     }
     .formula{
         margin: 3px;
+        position: absolute;
+        top: 200px;
+        left: 45%;
+        margin-right: 30px;
     }
 }
